<resources>
    <string name="app_name">Tinda-POS</string>
    <string name="cashpass">Staff
        password</string>
    <string name="res">Colgate \t \t \t 1 \t \t \t 51.0</string>

    <string name="logout">Logout</string>
    <string name="import_product">Import CSV</string>
    <string name="add_product">Add Product</string>
    <string name="show_log">Show Log</string>
    <string name="send_server">Send to Server</string>

    <string-array name="cashstaffpos">
        <item>Manager</item>
        <item>Supervisor</item>
        <item>Cashier</item>
    </string-array>

    <string-array name="cashin">
        <item>Petty cash</item>
        <item>Change</item>
    </string-array>

    <string-array name="cashout">
        <item>Petty cash</item>
    </string-array>

    <string-array name="productField">
        <item>ID</item>
        <item>NAME</item>
        <item>DESCRIPTION</item>
        <item>PRICE</item>
        <item>QUANTITY</item>
    </string-array>

    <string-array name="journalField">
        <item>TRANSACTION NUMBER</item>
        <item>DATE AND TIME</item>
    </string-array>
    <string name="title_activity_manage_restore">ManageRestore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
