<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="1"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_import_product"
        android:orderInCategory="1"
        android:title="@string/import_product"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_add_product"
        android:orderInCategory="1"
        android:title="@string/add_product"
        app:showAsAction="never" />

    <item android:id="@+id/productSearch"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_show_log"
        android:orderInCategory="1"
        android:title="@string/show_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_send_to_server"
        android:orderInCategory="1"
        android:title="@string/send_server"
        app:showAsAction="never" />
</menu>